Prune icons a bit
A number of these were moved to resources, or unused in the first place.

--- a/src/pics/Makefile.in
+++ b/src/pics/Makefile.in
@@ -227,22 +227,20 @@ noinst_DATA = 1leftarrow.png 1leftarrow.xpm 1leftcomment.png \
 		1leftcomment.xpm	1rightarrow.png 1rightarrow.xpm 1rightcomment.png 1rightcomment.xpm	2leftarrow.png \
 		2leftarrow.xpm 2rightarrow.png 2rightarrow.xpm	alt_ghost_black.png alt_ghost_black.xpm \
 		alt_ghost_white.png	alt_ghost_white.xpm bottom.png bottom.xpm Bowl.xpm charset.png	charset.xpm \
-		computerplay.xpm connected.png	connected.xpm connect_no.png \
-		connect_no.xpm contexthelp.png	contexthelp.xpm down.png down.xpm editcut.png \
+		down.png down.xpm editcut.png \
 		editcut.xpm editdelete.png	editdelete.xpm editpaste.png editpaste.xpm exit.png \
 		exit.xpm filenew.png	filenew.xpm fileopen.png fileopen.xpm filesaveas.png \
 		filesaveas.xpm	filesave.png filesave.xpm gohome.png gohome.xpm help.png help.xpm	idea.png idea.xpm \
-		looking.xpm navIntersection.png	navIntersection.xpm newboard.png \
+		navIntersection.png	navIntersection.xpm newboard.png \
 		newboard.xpm new_bottom.xpm	new_down.xpm new_start.xpm new_top.xpm new_up.xpm \
-		node_black.png	node_black.xpm node_white.png node_white.xpm not_looking.xpm \
-		not_open.xpm not_quiet_new.xpm  \
-		not_quiet.xpm openterm.png	openterm.xpm open.xpm package_settings.png \
-		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm quiet.xpm \
-		refresh_games.xpm refresh_players.xpm start.png \
+		node_black.png	node_black.xpm node_white.png node_white.xpm \
+		openterm.png	openterm.xpm package_settings.png \
+		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
+		start.png \
 		start.xpm table.png table.xpm top.png	top.xpm transform.png transform.xpm up.png \
 		up.xpm viewmag-.png	viewmag+.png viewmag-.xpm viewmag+.xpm \
 		window_fullscreen.png	window_fullscreen.xpm wood2.png wood2.xpm wood3.png wood3.xpm wood4.png	wood4.xpm wood5.png \
-		wood5.xpm wood.png wood.xpm  not_seeking.xpm seeking.gif \
+		wood5.xpm wood.png wood.xpm  seeking.gif \
 	coords.xpm sound_off.xpm sound_on.xpm
 
 all: all-am
