--- a/src/pics/Makefile.in
+++ b/src/pics/Makefile.in
@@ -225,8 +225,8 @@ Pics_DATA = barcelona_cherry.jpg birch.jpg eurobeech.jpg \
 
 noinst_DATA = 1leftarrow.png 1leftarrow.xpm 1leftcomment.png \
 		1leftcomment.xpm	1rightarrow.png 1rightarrow.xpm 1rightcomment.png 1rightcomment.xpm	2leftarrow.png \
-		2leftarrow.xpm 2rightarrow.png 2rightarrow.xpm	alt_ghost_black.png alt_ghost_black.xpm \
-		alt_ghost_white.png	alt_ghost_white.xpm bottom.png bottom.xpm Bowl.xpm charset.png	charset.xpm \
+		2leftarrow.xpm 2rightarrow.png 2rightarrow.xpm \
+		bottom.png bottom.xpm Bowl.xpm charset.png	charset.xpm \
 		down.png down.xpm editcut.png \
 		editcut.xpm editdelete.png	editdelete.xpm editpaste.png editpaste.xpm exit.png \
 		exit.xpm filenew.png	filenew.xpm fileopen.png fileopen.xpm filesaveas.png \
@@ -237,10 +237,9 @@ noinst_DATA = 1leftarrow.png 1leftarrow.xpm 1leftcomment.png \
 		openterm.png	openterm.xpm package_settings.png \
 		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
 		start.png \
-		start.xpm table.png table.xpm top.png	top.xpm transform.png transform.xpm up.png \
+		start.xpm top.png	top.xpm transform.png transform.xpm up.png \
 		up.xpm viewmag-.png	viewmag+.png viewmag-.xpm viewmag+.xpm \
-		window_fullscreen.png	window_fullscreen.xpm wood2.png wood2.xpm wood3.png wood3.xpm wood4.png	wood4.xpm wood5.png \
-		wood5.xpm wood.png wood.xpm  seeking.gif \
+		window_fullscreen.png	window_fullscreen.xpm seeking.gif \
 	coords.xpm sound_off.xpm sound_on.xpm
 
 all: all-am
