Massively prune the automake gunk
There was a lot of here that was plainly unneeded, and the best course of
action seems to be to delete all but the minimum, and re-add things later
if they turn out to be necessary after all.

Also delete old KDevelop files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,7 @@
-####### kdevelop will overwrite this part!!! (begin)##########
+# Necessary since we have README.md rather than README
+AUTOMAKE_OPTIONS = foreign
 
-
-
-EXTRA_DIST = qgo.kdevprj admin qgo.spec 
-
-####### kdevelop will overwrite this part!!! (end)############
-# not a GNU package. You can remove this line, if 
-# have all needed files, that a GNU package needs
-AUTOMAKE_OPTIONS = foreign 
+EXTRA_DIST = admin
 
 #$(top_srcdir)/configure.in: configure.in.in $(top_srcdir)/subdirs
 #	cd $(top_srcdir) && $(MAKE) -f admin/Makefile.common configure.in ;
@@ -15,20 +9,19 @@ AUTOMAKE_OPTIONS = foreign
 $(top_srcdir)/subdirs:
 	cd $(top_srcdir) && $(MAKE) -f admin/Makefile.common subdirs
 
-$(top_srcdir)/acinclude.m4: $(top_srcdir)/admin/acinclude.m4.in $(top_srcdir)/admin/libtool.m4.in
-	@cd $(top_srcdir) && cat admin/acinclude.m4.in admin/libtool.m4.in > acinclude.m4
+#$(top_srcdir)/acinclude.m4: $(top_srcdir)/admin/acinclude.m4.in $(top_srcdir)/admin/libtool.m4.in
+#	@cd $(top_srcdir) && cat admin/acinclude.m4.in admin/libtool.m4.in > acinclude.m4
 
 MAINTAINERCLEANFILES = subdirs configure.in acinclude.m4 configure.files 
 
-package-messages:
-	$(MAKE) -f admin/Makefile.common package-messages
-	$(MAKE) -C po merge
+#package-messages:
+#	$(MAKE) -f admin/Makefile.common package-messages
+#	$(MAKE) -C po merge
 
-dist-hook:
-	cd $(top_distdir) && perl admin/am_edit -padmin
-	cd $(top_distdir) && $(MAKE) -f admin/Makefile.common subdirs
+#dist-hook:
+#	cd $(top_distdir) && perl admin/am_edit -padmin
+#	cd $(top_distdir) && $(MAKE) -f admin/Makefile.common subdirs
 
-noinst_DATA = acinclude.m4 aclocal.m4 Makefile.in config.h.in qgo.kdevelop \
-	qgo.spec
+noinst_DATA = aclocal.m4 Makefile.in config.h.in
 SUBDIRS = src templates
 INCLUDES = $(all_includes)
