--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,8 +13,8 @@ DISTHEADERS_MOC = audio.h bitarray.h board.h gamedialog.h gamestable.h gametree.
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h gatter.h globals.h gs_globals.h \
 	igsinterface.h imagehandler.h komispinbox.h mark.h \
-	matrix.h misc.h move.h msg_handler.h parserdefs.h setting.h sgf.h sgfparser.h stone.h \
-	tree.h
+	misc.h msg_handler.h parserdefs.h setting.h sgf.h sgfparser.h stone.h \
+	svgbuilder.h
 
 DISTSOURCES = audio.cpp board.cpp goboard.cc gamedialog.cpp \
 		gamestable.cpp gametree.cpp gatter.cpp helpviewer.cpp \
@@ -23,7 +23,7 @@ DISTSOURCES = audio.cpp board.cpp goboard.cc gamedialog.cpp \
 		misc.cpp msg_handler.cpp parser.cpp \
 		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
 		qnewgamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc \
-		stone.cpp tables.cpp telnet.cpp textview.cpp tip.cpp
+		stone.cpp svgbuilder.cpp tables.cpp telnet.cpp textview.cpp tip.cpp
 
 FORMS = clientwindow_gui.ui gameinfo_gui.ui gui_dialog.ui mainwidget_gui.ui newgame_gui.ui \
 	newlocalgame_gui.ui normaltools_gui.ui nthmove_gui.ui preferences_gui.ui \
